src/test/deca/context/invalid/classes/class_extends_unknown.deca
// Description :
//    Classe héritant d'une classe inexistante.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

class A extends UnknownClass {
    int x;
}

{
}

